--- a/env.template
+++ b/env.template
@@ -1,8 +1,3 @@
 LINKPREVIEW_API_KEY=
-DATABASE_URL=postgres://localhost:5432/dufflepud
-LOG_USAGE=false
 MAX_CONTENT_LENGTH=33554432
-S3_BUCKET=dufflepud
-S3_ENDPOINT_URL=https://us-southeast-1.linodeobjects.com
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY=
+REDIS_URL=
