--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,14 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 raddoo = "^0.0.18"
-flask = "^2.2.3"
+flask = {extras = ["async"], version = "^3.0.3"}
 gunicorn = "^20.1.0"
 flask-cors = "^3.0.10"
 toml = "^0.10.2"
 requests = "^2.28.2"
+redis = "^5.0.8"
+aiohttp = "^3.10.5"
+gevent = "^24.2.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
