--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,7 @@
 name: Docker build
+permissions:
+  packages: write
+  contents: read
 on:
   push:
     branches: [master]
@@ -18,7 +21,7 @@ jobs:
       - uses: docker/setup-qemu-action@v2
       - uses: docker/setup-buildx-action@v2
       - name: Build the Docker image
-        run: | 
+        run: |
           docker buildx build \
           -t ghcr.io/${{ github.repository_owner }}/dufflepud:latest \
           --platform linux/amd64 \
